[gd_scene load_steps=6 format=3 uid="uid://clu36t2vrxsq4"]

[ext_resource type="Script" path="res://template/gui/hud_overlay/userInterface.gd" id="1_fiq33"]
[ext_resource type="PackedScene" uid="uid://ve664lqnuyla" path="res://template/gui/hud_overlay/currencyGUI.tscn" id="1_pcaba"]
[ext_resource type="PackedScene" uid="uid://cwxp6v376nkhf" path="res://template/gui/settings/settings_menu.tscn" id="2_be33b"]
[ext_resource type="PackedScene" uid="uid://b8g12hp8rlv0x" path="res://template/gui/inventory/inventory.tscn" id="3_linbb"]
[ext_resource type="PackedScene" uid="uid://d8dh7cc31k56" path="res://template/gui/hud_overlay/hud.tscn" id="3_rb4wh"]

[node name="userInterface" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fiq33")

[node name="currencyUI" parent="." instance=ExtResource("1_pcaba")]
layout_mode = 1

[node name="HUD" parent="." instance=ExtResource("3_rb4wh")]
layout_mode = 1
offset_left = -3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 3.0

[node name="pauseOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.235294)
metadata/_edit_lock_ = true

[node name="title" type="Label" parent="pauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -199.0
offset_right = -87.0
offset_bottom = -179.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
text = "Paused Screen"

[node name="pauseMenu" type="VBoxContainer" parent="pauseOverlay"]
layout_mode = 0
offset_left = 196.0
offset_top = 260.0
offset_right = 1081.0
offset_bottom = 555.0

[node name="marginContainer" type="MarginContainer" parent="pauseOverlay/pauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="mainMenuButton" type="Button" parent="pauseOverlay/pauseMenu/marginContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Main Menu"

[node name="MarginContainer2" type="MarginContainer" parent="pauseOverlay/pauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="optionsButton" type="Button" parent="pauseOverlay/pauseMenu/MarginContainer2"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="pauseOverlay/pauseMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="quitButton" type="Button" parent="pauseOverlay/pauseMenu/MarginContainer3"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Quit"

[node name="settings_menu" parent="pauseOverlay" instance=ExtResource("2_be33b")]
visible = false

[node name="inventoryOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.235294)
metadata/_edit_lock_ = true

[node name="Inventory" parent="inventoryOverlay" instance=ExtResource("3_linbb")]

[connection signal="pressed" from="pauseOverlay/pauseMenu/marginContainer/mainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="pauseOverlay/pauseMenu/MarginContainer2/optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="pauseOverlay/pauseMenu/MarginContainer3/quitButton" to="." method="_on_quit_button_pressed"]
